Bug 1061646 - Inline CheckForInterrupt on windows, just like we do on linux, r=jorendorff